--- a/Project/李杭/auto/test-output/emailable-report.html
+++ b/Project/李杭/auto/test-output/emailable-report.html
@@ -9,13 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">s1</th></tr>
-<tr><td><a href="#t0">test1</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">133,977</td><td></td><td></td></tr>
+<tr><td><a href="#t0">test1</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">37</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">s1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">test1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.webtest.demo.Admin_Login</td><td><a href="#m0">test_Login</a></td><td rowspan="4">1605700410273</td><td rowspan="4">3496</td></tr><tr class="passedeven"><td><a href="#m1">test_Login</a></td></tr><tr class="passedeven"><td><a href="#m2">test_Login</a></td></tr><tr class="passedeven"><td><a href="#m3">test_Login</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">s1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">test1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.webtest.demo.AntTest</td><td><a href="#m0">test_ant</a></td><td rowspan="1">1606117651108</td><td rowspan="1">3</td></tr></tbody>
 </table>
-<h2>test1</h2><h3 id="m0">com.webtest.demo.Admin_Login#test_Login</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>admin</td><td>admin1235</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.webtest.demo.Admin_Login#test_Login</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>admin</td><td>admin1234</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.webtest.demo.Admin_Login#test_Login</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>admin</td><td>admin1237</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.webtest.demo.Admin_Login#test_Login</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>admin</td><td>admin1236</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>test1</h2><h3 id="m0">com.webtest.demo.AntTest#test_ant</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
