--- a/Project/李杭/auto/test-output/index.html
+++ b/Project/李杭/auto/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,22 +102,7 @@
                     <div class="method-list-content passed suite-s1">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-s1" title="com.webtest.demo.Admin_Login" hash-for-method="test_Login(admin, admin1235)">test_Login(admin, admin1235)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-s1" title="com.webtest.demo.Admin_Login" hash-for-method="test_Login(admin, admin1234)">test_Login(admin, admin1234)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-s1" title="com.webtest.demo.Admin_Login" hash-for-method="test_Login(admin, admin1237)">test_Login(admin, admin1237)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-s1" title="com.webtest.demo.Admin_Login" hash-for-method="test_Login(admin, admin1236)">test_Login(admin, admin1236)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-s1" title="com.webtest.demo.AntTest" hash-for-method="test_ant">test_ant</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-s1 -->
@@ -135,39 +120,14 @@
           <div class="suite-s1-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.webtest.demo.Admin_Login</span>
+              <span class="class-name">com.webtest.demo.AntTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="test_Login(admin, admin1235)">
-                  </a> <!-- test_Login(admin, admin1235) -->
-                  <span class="method-name">test_Login</span>
-                  <span class="parameters">(admin, admin1235)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test_Login(admin, admin1234)">
-                  </a> <!-- test_Login(admin, admin1234) -->
-                  <span class="method-name">test_Login</span>
-                  <span class="parameters">(admin, admin1234)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test_Login(admin, admin1237)">
-                  </a> <!-- test_Login(admin, admin1237) -->
-                  <span class="method-name">test_Login</span>
-                  <span class="parameters">(admin, admin1237)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="test_Login(admin, admin1236)">
-                  </a> <!-- test_Login(admin, admin1236) -->
-                  <span class="method-name">test_Login</span>
-                  <span class="parameters">(admin, admin1236)</span>
+                  <a name="test_ant">
+                  </a> <!-- test_ant -->
+                  <span class="method-name">test_ant</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -182,9 +142,12 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;s1&quot;&gt;
+  &lt;listeners&gt;
+    &lt;listener class-name=&quot;com.webtest.core.WebTestListener&quot;/&gt;
+  &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;test1&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.webtest.demo.Admin_Login&quot;/&gt;
+      &lt;class name=&quot;com.webtest.demo.AntTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- test1 --&gt;
 &lt;/suite&gt; &lt;!-- s1 --&gt;
@@ -224,28 +187,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'test_Login')
-data.setCell(0, 2, 'com.webtest.demo.Admin_Login')
-data.setCell(0, 3, 51817);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'test_Login')
-data.setCell(1, 2, 'com.webtest.demo.Admin_Login')
-data.setCell(1, 3, 3496);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'test_Login')
-data.setCell(2, 2, 'com.webtest.demo.Admin_Login')
-data.setCell(2, 3, 3330);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'test_Login')
-data.setCell(3, 2, 'com.webtest.demo.Admin_Login')
-data.setCell(3, 3, 3250);
+data.setCell(0, 1, 'test_ant')
+data.setCell(0, 2, 'com.webtest.demo.AntTest')
+data.setCell(0, 3, 3);
 window.suiteTableData['s1']= { tableData: data, tableDiv: 'times-div-s1'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 3 ms</span>
               <div id="times-div-s1">
               </div> <!-- times-div-s1 -->
             </div> <!-- times-div -->
@@ -271,31 +222,11 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.webtest.demo.Admin_Login</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">doBeforeClass</span>
+              <div class="chronological-class-name">com.webtest.demo.AntTest</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">test_ant</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <span class="method-name">test_Login(admin, admin1234)</span>
-                <span class="method-start">69682 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">test_Login(admin, admin1235)</span>
-                <span class="method-start">121521 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">test_Login(admin, admin1236)</span>
-                <span class="method-start">125017 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">test_Login(admin, admin1237)</span>
-                <span class="method-start">128267 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">doAfterMethod</span>
-                <span class="method-start">131597 ms</span>
-              </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
