--- a/Project/李杭/auto/test-output/old/s1/classes.html
+++ b/Project/李杭/auto/test-output/old/s1/classes.html
@@ -4,22 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.webtest.demo.Admin_Login</td>
+<td>com.webtest.demo.AntTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_Login</td>
+<td>test_ant</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>doBeforeClass</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -29,8 +25,4 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>doAfterMethod</td>
-<td>&nbsp;</td></tr>
 </table>
